# rust-web-server

./: Cargo.toml  README.md
src/: main.rs  server.rs
templates/: 404.html  index.html
