[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true # Strip symbols from the binary
lto = true # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
